infra/admin-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: mailingapp.azurecr.io/admin:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - name: admin
      protocol: TCP
      targetPort: 80
      port: 80
