infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailing-app-ingress-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.ibrarmunir.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: admin.ibrarmunir.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
    - host: api.ibrarmunir.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
  tls:
    - hosts:
        - frontend.ibrarmunir.co
      secretName: frontend-ibrarmunir-secret
    - hosts:
        - admin.ibrarmunir.co
      secretName: admin-ibrarmunir-secret
    - hosts:
        - api.ibrarmunir.co
      secretName: api-ibrarmunir-secret
